@@ -19,6 +19,7 @@
 -add mixer music object.
 -add mixer channel endevent.
 -add mixer channel queue.
+-refactor event handler for performance.
 
 0.24    2021-04-28
 -revise rect move/inflate args processing.
